<resources>
    <string name="app_name">Socially</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="your_profile">Profile</string>
    <string name="settings">Setting</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="forgot_password_hint">Forgot Password ?</string>
    <string name="follow">Follow</string>
    <string name="posts">Posts</string>
    <string name="example_post_username">dummy</string>
    <string name="example_post_text">Today is a good day to make a post in this social network, this is actually just an example text I write to have some lines of text</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="username">UserName</string>
    <string name="description">Description</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_comment">Enter comment</string>
    <string name="search_hint">Search</string>
    <string name="unfollow">Un Follow</string>
    <string name="post">Text</string>
    <string name="enter_post_text">Enter post text</string>
    <string name="choose_image">Choose image</string>
</resources>