<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <!--these items will be always visible
        on the Bottom navigation bar-->
    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />

    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search" />

    <item android:id="@+id/placeholder"
        android:title="" />

    <item android:id="@+id/profile"
        android:title="@string/your_profile"
        android:icon="@drawable/ic_person" />

    <item android:id="@+id/setting"
        android:title="@string/settings"
        android:icon="@drawable/ic_setting" />



</menu>
